# ETH-Zurich-ROS-Lab

./: .gitignore  README.md
ex1/: ex1.launch
ex2/husky_highlevel_controller/: CMakeLists.txt  package.xml
ex2/husky_highlevel_controller/config/: config.yaml  rviz_config.rviz
ex2/husky_highlevel_controller/include/: HuskyHighLevelController.hpp
ex2/husky_highlevel_controller/launch/: husky_high_level_controller.launch
ex2/husky_highlevel_controller/src/: HuskyHighLevelController.cpp
ex3/husky_highlevel_controller/: CMakeLists.txt  package.xml
ex3/husky_highlevel_controller/config/: config.yaml
ex3/husky_highlevel_controller/src/: HuskyHighLevelController.cpp
ex4/husky_highlevel_controller/: CMakeLists.txt  package.xml
ex4/husky_highlevel_controller/config/: rviz_recorded_husky.rviz
ex4/husky_highlevel_controller/include/: HuskyHighLevelController.hpp
ex4/husky_highlevel_controller/launch/: husky_high_level_controller.launch  recorded_husky.launch
ex4/husky_highlevel_controller/src/: husky_highlevel_controller_node.cpp
ex5/husky_highlevel_controller/: CMakeLists.txt  package.xml
ex5/husky_highlevel_controller/config/: config.yaml  rqt_multiplot.xml  rviz_config.rviz
ex5/husky_highlevel_controller/include/: HuskyHighLevelController.hpp  HuskyProximitySensor.h
ex5/husky_highlevel_controller/launch/: husky_high_level_controller.launch
ex5/husky_highlevel_controller/src/: HuskyHighLevelController.cpp  HuskyProximitySensor.cpp  husky_proximity_detection_node.cpp
